# ACT-R-Harness

./: .dockerignore  README.md  docker-compose.yml  ruleset.yml
Dotnet/: .gitignore  ACT-R-Harness.sln.DotSettings  ACT-R-Harness.slnx  Dockerfile
Dotnet/src/Harness.Abstractions/: Harness.Abstractions.csproj  IClock.cs  IEmbeddingService.cs  IModule.cs  IModuleRegistry.cs  INeuroCore.cs  IProceduralMemory.cs  IRewardService.cs  IRewardStateProvider.cs
Dotnet/src/Harness.Abstractions/Modules/: IModule.cs  IModuleRegistry.cs  ModuleBase.cs
Dotnet/src/Harness.Abstractions/Reward/: IRewardService.cs  IRewardStateProvider.cs
Dotnet/src/Harness.Codebase/: Common.cs  Harness.Codebase.csproj  Harness.Codebase.csproj.DotSettings
Dotnet/src/Harness.Codebase/Modules/: CodeViewportModule.cs  CodebaseScannerModule.cs  DeltaDetectorModule.cs  FileExplorerModule.cs
Dotnet/src/Harness.Codebase/Modules/Buffers/: CodebaseScannerModule.cs  DeltaDetectorModule.cs
Dotnet/src/Harness.Codebase/Modules/Interiors/: CodebaseScannerModule.cs  DeltaDetectorModule.cs
Dotnet/src/Harness.Core/: Harness.Core.csproj  HarnessCore.cs  HouseholdRewardService.cs  IModule.cs  INeuroCore.cs  IProceduralMemory.cs  ModuleRegistry.cs  NeuroCore.cs  ProceduralMemory.cs  StepClock.cs
Dotnet/src/Harness.Core/Extensions/: DependencyInjectionExtensions.cs
Dotnet/src/Harness.Core/Legacy/: FpPerceptionMotorModule.cs
Dotnet/src/Harness.Core/Modules/: DeclarativeMemory.cs  DeclarativeMemoryModule.cs  IntentionModule.cs  PerceptionMotorModule.cs  SimulatedHome.cs
Dotnet/src/Harness.Core/Modules/Buffers/: DeclarativeMemoryModule.cs  IntentionModule.cs  PerceptionMotorModule.cs
Dotnet/src/Harness.Core/Modules/Interiors/: DeclarativeMemoryModule.cs  IntentionModule.cs  PerceptionMotorModule.cs
Dotnet/src/Harness.Host/: Harness.Host.csproj  HarnessRunner.cs  Program.cs  appsettings.example.json
Dotnet/src/Harness.Host/Options/: GrpcClientsOptions.cs  HarnessOptions.cs
Dotnet/src/Harness.Shared/Utils/: NumericUtils.cs
docs/: action-representation.md
python/: .dockerignore  .gitignore  Dockerfile  pyproject.toml
python/src/: agent.py  declarative.py  declarative_memory.py  interfaces.py  main.py  models.py  neuro_core.py  neuro_core_mock.py  perception.py  procedural.py  procedural_memory.py
python/src/services/: declarative_memory.py  frostpunk_game.py  neuro_core.py  procedural_memory.py
python/src/world/: frostpunk_sim.py
python/tests/: agent_loop.py  procedural_utility_learning.py
python/tools/: generate_protos.py
shared/proto/: common.proto
shared/proto/services/: declarative_memory.proto  neuro_core.proto  perception_motor.proto  procedural_memory.proto
shared/ruleset/: lab.yml
