[project]
authors = [{name = "Chshine1", email = "chshine@qq.com"}]
dependencies = []
name = "python"
requires-python = ">= 3.11"
version = "0.1.0"

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[tool.pixi.workspace]
channels = ["conda-forge"]
platforms = ["win-64"]

[tool.pixi.tasks]
typecheck = "pixi run -e dev mypy src tests && pixi run -e dev pyright src tests"
lint = "pixi run -e dev ruff check src tests"
check = "pixi run typecheck && pixi run lint"

[tool.pixi.dependencies]
python = "3.13.*"
pyyaml = ">=6.0.3,<7"

[tool.pixi.feature.dev.dependencies]
pytest = ">=9.1.1,<10"

[tool.pixi.feature.dev.pypi-dependencies]
decoy = ">=2.6.0, <3"
pyright = ">=1.1.410, <2"
mypy = ">=2.1.0, <3"
ruff = ">=0.15.18, <0.16"

[tool.pixi.environments]
dev = ["default", "dev"]

[tool.pyright]
reportGeneralTypeIssues = true
reportPropertyTypeMismatch = true
reportFunctionMemberAccess = true
reportMissingTypeStubs = true
reportImportCycles = true
reportUnusedVariable = true
reportUnusedImport = true
reportOptionalMemberAccess = true
reportOptionalSubscript = true
reportOptionalIterable = true
reportOptionalContextManager = true
reportPrivateUsage = true
reportUnboundVariable = true
reportInvalidTypeArguments = true
reportCallInDefaultInitializer = true
reportUnnecessaryCast = true
reportUnnecessaryTypeIgnoreComment = true

venvPath = ".pixi/envs"
venv = "dev"

[tool.mypy]
disallow_any_unimported = true
disallow_any_expr = true
disallow_any_decorated = true
disallow_any_explicit = true
disallow_any_generics = true
disallow_subclassing_any = true

warn_return_any = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_unused_configs = true
no_implicit_optional = true
strict_equality = true

check_untyped_defs = true

plugins = ["decoy.mypy"]

[tool.ruff]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # Pyflakes
    "I",   # isort
    "N",   # pep8-naming
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "SIM", # flake8-simplify
    "TCH", # flake8-type-checking
    "PL",  # pylint
    "RUF", # Ruff-specific rules
]
ignore = []
line-length = 88
target-version = "py313"

[tool.ruff.per-file-ignores]
"tests/**/*.py" = ["S101"]
