[project]
authors = [{name = "Chshine1", email = "chshine@qq.com"}]
name = "python"
requires-python = ">= 3.11"
version = "0.1.0"

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[tool.pixi.workspace]
channels = ["conda-forge"]
platforms = ["win-64", "linux-64"]

[tool.pixi.pypi-options]
no-build-isolation = ["grpcio-tools"]

[tool.pixi.tasks]
typecheck = "pixi run -e dev mypy src tests && pixi run -e dev pyright src tests"
lint = "pixi run -e dev ruff check src tests"
check = "pixi run typecheck && pixi run lint"
protos-gen = "pixi run -e dev python tools/generate_protos.py"
start = "python -m src.main --port 50051"

[tool.pixi.dependencies]
python = "3.13.*"
pyyaml = ">=6.0.3,<7"
ca-certificates = ">=2026.6.17,<2027"

[tool.pixi.pypi-dependencies]
grpclib = ">=0.4.9,<0.5"
betterproto = "==2.0.0b7"
httpx = ">=0.28.1,<0.29"

[tool.pixi.feature.dev.dependencies]
pytest = ">=9.1.1,<10"

[tool.pixi.feature.dev.pypi-dependencies]
decoy = ">=2.6.0, <3"
pyright = ">=1.1.410, <2"
mypy = ">=2.1.0, <3"
ruff = ">=0.15.18, <0.16"
setuptools = ">=82.0.1, <83"
pyrefly = ">=1.1.1, <2"
betterproto = { version = "==2.0.0b7", extras = ["compiler"] }
grpcio-tools = ">=1.81.1, <2"

[tool.pixi.environments]
dev = ["default", "dev"]

[tool.pyright]
root = "."
include = ["src", "tests"]
exclude = ["**/__pycache__", "**/node_modules", "src/generated"]

reportGeneralTypeIssues = true
reportPropertyTypeMismatch = true
reportFunctionMemberAccess = true
reportMissingTypeStubs = true
reportImportCycles = true
reportUnusedVariable = true
reportUnusedImport = true
reportOptionalMemberAccess = true
reportOptionalSubscript = true
reportOptionalIterable = true
reportOptionalContextManager = true
reportPrivateUsage = true
reportUnboundVariable = true
reportInvalidTypeArguments = true
reportCallInDefaultInitializer = true
reportUnnecessaryCast = true
reportUnnecessaryTypeIgnoreComment = true

venvPath = ".pixi/envs"
venv = "dev"

[tool.mypy]
disallow_any_unimported = true
disallow_any_expr = true
disallow_any_decorated = true
disallow_any_explicit = true
disallow_any_generics = true
disallow_subclassing_any = true

warn_return_any = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_unused_configs = true
no_implicit_optional = true
strict_equality = true

check_untyped_defs = true

plugins = ["decoy.mypy"]

exclude = [
    "^src/generated/.*",
]

[tool.ruff]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # Pyflakes
    "I",   # isort
    "N",   # pep8-naming
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "SIM", # flake8-simplify
    "TCH", # flake8-type-checking
    "PL",  # pylint
    "RUF", # Ruff-specific rules
]
ignore = []
line-length = 88
target-version = "py313"

exclude = [
    "src/generated",
]

[tool.ruff.per-file-ignores]
"tests/**/*.py" = ["S101"]
